# sonosctl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sonos_spotify_cli.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AI_AGENT_INTEGRATION.md  ARCHITECTURE.md  DEPLOYMENT_RUNBOOK.md  HARDENING_CHECKLIST.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  OPERATOR_GUIDE.md  SONOS_CLI_CONTEXT.md
sonosctl/: __main__.py  cli.py  config.py  history.py  speaker.py  spotify.py  types.py
sonosctl/commands/: __init__.py  auth.py  devices.py  doctor.py  favorites.py  group.py  history.py  modes.py  monitor.py  playback.py  playlist.py  playlist_info.py  queue.py  search.py
